<resources>
    <string name="app_name">Run</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_runs">Runs</string>
    <string name="action_delete">Delete</string>

    <string name="Start">Start</string>
    <string name="Stop">Stop</string>
    <string name="Save">Save</string>
    <string name="Pause">Pause</string>
    <string name="Unpause">Unpause</string>
    <string name="min_time">Minimum Time</string>
    <string name="min_time_summary">Minimum amount of milliseconds between marker updates</string>

    <string name="max_time">Maximum Time</string>
    <string name="max_time_summary">Maximum amount of milliseconds between marker updates, no matter how inaccurate the second one is</string>

    <string name="title_activity_settings">Settings</string>

    <string name="quit_notice_title">Exiting</string>
    <string name="quit_notice_message">Cannot connect to Google API or GPS services isn\'t enabled, so we\'re exiting.</string>

    <string name="no_input_title">There was no input</string>
    <string name="name_run_title">Enter a name for this run</string>
    <string name="clear_runs_title">Are you sure you want to clear all your runs?</string>

    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="initial_speed">Speed: 0.00</string>
    <string name="initial_distance">Distance: 0.00</string>
    <string name="initial_time">Time: 0:00</string>
    <string name="initial_duration">Duration: 0:00</string>

    <string name="title_activity_runs">Runs</string>
    <string name="title_activity_run">Run</string>
    <string name="time_label">Time: </string>

    <string name="clear_runs_button">Clear runs</string>
    <string name="clear_runs_button_summary">Clear all your runs</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>


</resources>