<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">

    <fragment
        android:id="@+id/Map"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        class="com.google.android.gms.maps.MapFragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/time_label"
            android:layout_margin="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <Chronometer
            android:id="@+id/time"
            android:layout_margin="5dp"
            android:text="@string/initial_time"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/speed"
            android:layout_margin="5dp"
            android:text="@string/initial_speed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
        <TextView
            android:id="@+id/distance"
            android:layout_margin="5dp"
            android:text="@string/initial_distance"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:id="@+id/average_speed"
            android:text="@string/initial_speed"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <Button
            android:id="@+id/Start"
            android:text="@string/Start"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:onClick="Start"/>
        <!-- TODO: PAUSE BUTTON
        <Button
            android:id="@+id/Pause"
            android:text="@string/Pause"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:onClick="Pause"/>-->
        <Button
            android:id="@+id/Save"
            android:text="@string/Save"
            android:layout_width="100dp"
            android:layout_height="64dp"
            android:onClick="Save"
            android:enabled="false"/>
        <!-- <Button
            android:text="CRASH"
            android:onClick="CRASH"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" /> -->
    </LinearLayout>

</LinearLayout>
