<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.dingtao.run.RunActivity">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/name"
                android:layout_width="70dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/duration"
                android:text="@string/initial_duration"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/average_speed"
                android:text="@string/initial_speed"
                android:layout_width="120dp"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="25dp">
            <TextView
                android:id="@+id/distance"
                android:text="@string/initial_distance"
                android:layout_width="130dp"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/begin"
                android:text="@string/initial_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
        <TabHost
            android:id="@+id/tabhost"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">
                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent">
                    <fragment
                        android:id="@+id/map"
                        android:layout_width="match_parent"
                        android:layout_height="350dp"
                        class="com.google.android.gms.maps.MapFragment" />
                    <lecho.lib.hellocharts.view.LineChartView
                        android:id="@+id/speed_chart"
                        android:layout_width="match_parent"
                        android:layout_height="350dp" />
                </FrameLayout>
            </LinearLayout>
        </TabHost>


    </LinearLayout>
</LinearLayout>